@@ -616,17 +616,17 @@
         {
           "type": "string",
           "name": "Japanese",
-          "value": "Pulser Omega"
+          "value": "Pale Pulser"
         },
         {
           "type": "string",
           "name": "English",
-          "value": "Pulser Omega"
+          "value": "Pale Pulser"
         },
         {
           "type": "string",
           "name": "Chinese",
-          "value": "Pulser Omega"
+          "value": "Pale Pulser"
         }
       ]
     },
@@ -646,7 +646,7 @@
     "id": "Pulser3",
     "level": 84,
     "category": 11,
-	"after": "Weapon227",
+    "after": "Weapon227",
     "unlockState": 0,
     "dropRateModifier": 1,
     "description": "<font face=%dq%$FixedFont%dq% color=%dq%#ffffff%dq%>          Capacity: 20                   Charge Time: 2.0sec\n               ROF: 2.4/sec              Energy Cost: 10%\n            Damage: 200.0X10\n             Range: 300.0m\n          Accuracy: A-\n<font face=%dq%$NormalFont%dq% color=%dq%#80c3f5%dq%>\nThe most powerful handheld pulse laser ever developed, special clearance must be obtained before wielding this weapon. Its insane output can obliterate targets with impressive blasts of light."
