@@ -92,13 +92,20 @@ WING DIVER
   - Electric Rapier | Short-Range
   - Electric Rapier 2 | Short-Range
   - Electric Rapier 3 | Short-Range
+  - Pulser | Mid-Range Laser
+  - Gigawatt Pulser | Mid-Range laser
+  - Pale Pulser | Mid-Range Laser
   - SIG Chainsaw | Mid-Range Laser
   - Grom-Z | Mid-Range Electric
-  - Dynastrike Ω | Particle Cannos
-  - Raijin Z | Sniper Weapons
+  - Dynastrike Ω | Particle Cannons
+  - Starburst | Particle Cannons
   - Gleipnir ? | Special Weapons
   - Gleipnir HR | Special Weapons
-  - Gleipnir-FF | Special Wewapons
+  - Gleipnir-FF | Special Weapons
+  - Plasma Capacitor | Special Weapons
+  - Plasma Capacitor YD | Special Weapons
+  - Plasma Capacitor ZD | Special Weapons
+
 
 FENCER
   - Striker DV | CC Strikers
